--- a/main/static/styles/index.less
+++ b/main/static/styles/index.less
@@ -1,3 +1,203 @@
-h1 {
-  color: aqua;
+// Colors ------------------------------------------------------------------------------------------
+@black: #040404;
+@white: #FFFFFF;
+@buttonOutline: #565656;
+@aboutBackground: #1E1E1E;
+@globalBackground: #0F1010;
+@masterDescription: #3A3A3A;
+
+// Fonts -------------------------------------------------------------------------------------------
+@mainFont: 'Ubuntu', sans-serif;
+
+// Displays ----------------------------------------------------------------------------------------
+@largeDesktops: ~"(min-width: 1200px)";
+
+@mediumDesktopsMin: ~"(min-width: 980px)";
+@mediumDesktopsMax: ~"(max-width: 1199px)";
+
+@smallDesktopsMin: ~"(min-width: 769px)";
+@smallDesktopsMax: ~"(max-width: 979px)";
+
+@landscapePhonesMin: ~"(min-width: 640px)";
+@landscapePhonesMax: ~"(max-width: 768px)";
+
+@landscapePhonesSmaller: ~"(max-width: 639px)";
+
+// Margins ---------------------------------------------------------------------------------------
+@logoLeftMargin: 42px;
+@logoTopMargin: 25px;
+@headerButtonsRightMargin: 78px;
+@headerButtonsHorizontalMargin: 85px;
+@headerButtonsVerticalMargin: 45px;
+
+// Sizes -----------------------------------------------------------------------------------------
+@headerSize: 75px;
+@logoLargeWidth: 210px;
+@logoSmallWidth: 150px;
+@headerButtonFontSize: 20px;
+
+// Styles ----------------------------------------------------------------------------------------
+* {
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+header {
+  width: 100%;
+  background: @black;
+
+  @media @largeDesktops {
+    height: @headerSize;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+  }
+
+  @media @mediumDesktopsMin and @mediumDesktopsMax {
+    height: @headerSize;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+  }
+
+  @media @smallDesktopsMin and @smallDesktopsMax {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  @media @landscapePhonesMin and @landscapePhonesMax {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  @media @landscapePhonesSmaller {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+  }
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+
+  @media @largeDesktops {
+    margin-left: @logoLeftMargin;
+  }
+
+  @media @mediumDesktopsMin and @mediumDesktopsMax {
+    margin-left: @logoLeftMargin;
+  }
+
+  @media @smallDesktopsMin and @smallDesktopsMax {
+    margin-top: @logoTopMargin;
+  }
+
+  @media @landscapePhonesMin and @landscapePhonesMax {
+    margin-top: @logoTopMargin;
+  }
+
+  @media @landscapePhonesSmaller {
+    margin-top: @logoTopMargin;
+  }
+}
+
+.logo img {
+  @media @largeDesktops {
+    width: @logoLargeWidth;
+  }
+
+  @media @mediumDesktopsMin and @mediumDesktopsMax {
+    width: @logoLargeWidth;
+  }
+
+  @media @smallDesktopsMin and @smallDesktopsMax {
+    width: @logoLargeWidth;
+  }
+
+  @media @landscapePhonesMin and @landscapePhonesMax {
+    width: @logoLargeWidth;
+  }
+
+  @media @landscapePhonesSmaller {
+    width: @logoSmallWidth;
+  }
+}
+
+.buttons-list {
+  list-style-type: none;
+  color: @white;
+  font-family: @mainFont;
+  font-size: @headerButtonFontSize;
+
+  @media @largeDesktops {
+    display: flex;
+    flex-direction: row;
+    margin-right: @headerButtonsRightMargin;
+    align-items: center;
+  }
+
+  @media @mediumDesktopsMin and @mediumDesktopsMax {
+    display: flex;
+    flex-direction: row;
+    margin-right: @headerButtonsRightMargin;
+    align-items: center;
+  }
+
+  @media @smallDesktopsMin and @smallDesktopsMax {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: @logoTopMargin 0;
+  }
+
+  @media @landscapePhonesMin and @landscapePhonesMax {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: @logoTopMargin 0;
+  }
+
+  @media @landscapePhonesSmaller {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: @logoTopMargin 0;
+  }
+}
+
+.buttons-list a:not(:first-child) {
+  @media @largeDesktops {
+    margin-left: @headerButtonsHorizontalMargin;
+  }
+
+  @media @mediumDesktopsMin and @mediumDesktopsMax {
+    margin-left: @headerButtonsHorizontalMargin;
+  }
+
+  @media @smallDesktopsMin and @smallDesktopsMax {
+    margin-top: @headerButtonsVerticalMargin;
+  }
+
+  @media @landscapePhonesMin and @landscapePhonesMax {
+    margin-top: @headerButtonsVerticalMargin;
+  }
+
+  @media @landscapePhonesSmaller {
+    margin-top: @headerButtonsVerticalMargin;
+  }
 }
