--- a/main/templates/main/html/index.html
+++ b/main/templates/main/html/index.html
@@ -6,6 +6,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Holtwood+One+SC&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 {% endblock %}
 
 {% block css %}
@@ -39,10 +43,37 @@
     </header>
 
     <main class="main">
+        <div class="info">
+            <h1 class="studio_name">Black Door</h1>
 
+            <span class="bdsmr_hashtag">#BDSMr</span>
+            <span class="tattoo_studio">Тату салон в Самаре</span>
+            <span class="address">5-я просека, 129, Самара</span>
+            <span class="phone">
+                <a href="tel:+79270171661">+7 (927) 017-16-61</a>
+            </span>
+        </div>
+
+        <div class="services">
+            <h2 class="services_title">УСЛУГИ</h2>
+
+            <div class="slider">
+                <div class="slider__item"><img src="static/source/image1.png" alt="Image 1"></div>
+                <div class="slider__item"><img src="static/source/image2.png" alt="Image 2"></div>
+                <div class="slider__item"><img src="static/source/image3.png" alt="Image 3"></div>
+                <div class="slider__item"><img src="static/source/image4.png" alt="Image 4"></div>
+                <div class="slider__item"><img src="static/source/image5.png" alt="Image 5"></div>
+            </div>
+
+            <button class="book_session_button">ЗАПИСАТЬСЯ НА СЕАНС</button>
+        </div>
     </main>
 
     <footer class="footer">
 
     </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="static/js/slider.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 {% endblock %}
