--- a/main/templates/main/html/index.html
+++ b/main/templates/main/html/index.html
@@ -58,14 +58,71 @@
             <h2 class="services_title">УСЛУГИ</h2>
 
             <div class="slider">
-                <div class="slider__item"><img src="static/source/image1.png" alt="Image 1"></div>
-                <div class="slider__item"><img src="static/source/image2.png" alt="Image 2"></div>
-                <div class="slider__item"><img src="static/source/image3.png" alt="Image 3"></div>
-                <div class="slider__item"><img src="static/source/image4.png" alt="Image 4"></div>
-                <div class="slider__item"><img src="static/source/image5.png" alt="Image 5"></div>
+                <div class="slider__item" id="tattoos">
+                    <div class="inside_box">
+                        <img src="static/source/slider/image1.png" alt="Image 1">
+                        <h2>ТАТУИРОВКИ</h2>
+                    </div>
+                </div>
+                <div class="slider__item" id="sketches">
+                    <div class="inside_box">
+                        <img src="static/source/slider/image2.png" alt="Image 2">
+                        <h2>ЭСКИЗЫ</h2>
+                    </div>
+                </div>
+                <div class="slider__item" id="makeup">
+                    <div class="inside_box">
+                        <img src="static/source/slider/image3.png" alt="Image 3">
+                        <h2>ПЕРМАНЕНТНЫЙ МАКИЯЖ</h2>
+                    </div>
+                </div>
+                <div class="slider__item" id="learning">
+                    <div class="inside_box">
+                        <img src="static/source/slider/image4.png" alt="Image 4">
+                        <h2>ОБУЧЕНИЕ</h2>
+                    </div>
+                </div>
+                <div class="slider__item" id="certificates">
+                    <div class="inside_box">
+                        <img src="static/source/slider/image5.png" alt="Image 5">
+                        <h2>СЕРТИФИКАТЫ</h2>
+                    </div>
+                </div>
             </div>
 
             <button class="book_session_button">ЗАПИСАТЬСЯ НА СЕАНС</button>
+        </div>
+
+        <div class="masters_work">
+            <h2>РАБОТЫ НАШИХ МАСТЕРОВ</h2>
+
+            <div class="creations">
+                <div><img src="static/source/masters_work/photo1.png"></div>
+                <div><img src="static/source/masters_work/photo2.png"></div>
+                <div><img src="static/source/masters_work/photo3.png"></div>
+                <div><img src="static/source/masters_work/photo4.png"></div>
+                <div><img src="static/source/masters_work/photo5.png"></div>
+                <div><img src="static/source/masters_work/photo6.png"></div>
+                <div><img src="static/source/masters_work/photo7.png"></div>
+                <div><img src="static/source/masters_work/photo8.png"></div>
+                <div><img src="static/source/masters_work/photo9.png"></div>
+            </div>
+
+            <button class="watch_more">Посмотреть еще</button>
+        </div>
+
+        <div class="team">
+            <h2>НАША КОМАНДА</h2>
+
+            <span class="team_signature">Интересуют работы конкретного мастера?<br> В личном портфолио мастеров собрано еще больше работ, переходи на страницу, чтобы посмотреть.</span>
+
+            <div class="masters">
+                <div class="master1"></div>
+                <div class="master2"></div>
+                <div class="master3"></div>
+                <div class="master4"></div>
+                <div class="master5"></div>
+            </div>
         </div>
     </main>
 
@@ -75,5 +132,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="static/js/slider.js"></script>
+    <script src="static/js/index.js" defer></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 {% endblock %}
