--- a/main/static/styles/index.less
+++ b/main/static/styles/index.less
@@ -1,3 +1,5 @@
+/*#region Переменные*/
+
 // Colors ------------------------------------------------------------------------------------------
 @black: #040404;
 @white: #FFFFFF;
@@ -5,11 +7,13 @@
 @aboutBackground: #1E1E1E;
 @globalBackground: #0F1010;
 @masterDescription: #3A3A3A;
+@viewPortfolio: #797979;
 
 // Fonts -------------------------------------------------------------------------------------------
 @ubuntu: 'Ubuntu', sans-serif;
 @holtwood: 'Holtwood One SC', serif;
 @roboto: 'Roboto', sans-serif;
+@inter: 'Inter', sans-serif;
 
 // Displays ----------------------------------------------------------------------------------------
 @largeDesktops: ~"(min-width: 1200px)";
@@ -41,8 +45,9 @@
 @headerButtonFontSize: 20px;
 @servicesTitleFontSize: 42px;
 
-// Styles ----------------------------------------------------------------------------------------
-/* Обнуление */
+/*#endregion Переменные*/
+
+/*#region Обнуление*/
 * {
   box-sizing: border-box;
 }
@@ -57,8 +62,12 @@ a {
   margin: 0;
   border: 0;
   box-sizing: border-box;
-  content: '';
+  content: none;
 }
+
+/*#endregion Обнуление*/
+
+/*#region Header*/
 
 header {
   width: 100%;
@@ -245,6 +254,10 @@ header {
   }
 }
 
+/*#endregion Header*/
+
+/*#region Основная информация*/
+
 .studio_name, .bdsmr_hashtag {
   color: @white;
   font-family: @holtwood;
@@ -371,6 +384,10 @@ header {
   }
 }
 
+/*#endregion Основная информация*/
+
+/*#region Услуги*/
+
 .services {
   width: 100%;
   height: 856px;
@@ -380,7 +397,26 @@ header {
   align-items: center;
   font-family: @roboto;
   background: @black;
-  padding: 0 150px;
+
+  @media @largeDesktops {
+    padding: 0 150px;
+  }
+
+  @media @mediumDesktopsMin and @mediumDesktopsMax {
+    padding: 0 30px;
+  }
+
+  @media @smallDesktopsMin and @smallDesktopsMax {
+    font-size: 60px;
+  }
+
+  @media @landscapePhonesMin and @landscapePhonesMax {
+    font-size: 45px;
+  }
+
+  @media @landscapePhonesSmaller {
+    font-size: 30px;
+  }
 }
 
 .services_title {
@@ -388,6 +424,7 @@ header {
   font-size: @servicesTitleFontSize;
   font-weight: bold;
   letter-spacing: 0.84px;
+  margin-top: 105px;
 }
 
 /*#region Слайдер*/
@@ -516,13 +553,16 @@ header {
   cursor: pointer;
 }
 
+/*#endregion Услуги*/
+
+/*#region Работы наших мастеров*/
+
 .masters_work {
   background: @black;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 300px 0 300px;
 }
 
 .masters_work h2 {
@@ -530,6 +570,7 @@ header {
   font-size: @servicesTitleFontSize;
   color: @white;
   margin: 102px 0 35px 0;
+  text-align: center;
 }
 
 .creations {
@@ -543,13 +584,13 @@ header {
   }
 
   @media @mediumDesktopsMin and @mediumDesktopsMax {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
   }
 
   @media @smallDesktopsMin and @smallDesktopsMax {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
   }
 
   @media @landscapePhonesMin and @landscapePhonesMax {
@@ -563,20 +604,39 @@ header {
   }
 }
 
-.creations:before,
-.creations:after {
-  content: none;
-}
-
 .watch_more {
   background: transparent;
   color: @white;
   font-family: @ubuntu;
   font-size: 32px;
-  align-self: flex-end;
   cursor: pointer;
   margin-top: 10px;
+  //grid-column: 3;
+
+  @media @largeDesktops {
+    grid-column: 3;
+  }
+
+  @media @mediumDesktopsMin and @mediumDesktopsMax {
+    grid-column: 2;
+  }
+
+  @media @smallDesktopsMin and @smallDesktopsMax {
+    grid-column: 1;
+  }
+
+  @media @landscapePhonesMin and @landscapePhonesMax {
+    grid-column: 1;
+  }
+
+  @media @landscapePhonesSmaller {
+    grid-column: 1;
+  }
 }
+
+/*#endregion Работы наших мастеров*/
+
+/*#region Наша команда*/
 
 .team {
   background: @black;
@@ -584,17 +644,14 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 80px 310px 0 310px;
+  padding-top: 80px;
 }
 
 .team h2 {
   color: @white;
   font-size: @servicesTitleFontSize;
   font-family: @roboto;
-}
-
-.team span {
-  color: @white;
+  text-align: center;
 }
 
 .team_signature {
@@ -602,4 +659,380 @@ header {
   font-size: 24px;
   margin: 18px 0 65px 0;
   text-align: center;
+  color: @white;
 }
+
+.masters_first {
+  display: grid;
+  gap: 25px;
+  justify-content: center;
+  align-content: center;
+}
+
+.masters_first > div {
+  position: relative;
+}
+
+.masters_first img {
+  width: 100%;
+  height: auto;
+  transition: filter 0.3s ease;
+  cursor: pointer;
+}
+
+.masters_first div:hover img {
+  filter: brightness(0.4);
+}
+
+.masters_first > div:hover div {
+  opacity: 1;
+}
+
+.masters_first > div div {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  bottom: 7%;
+  left: 0;
+  width: 100%;
+  font-family: @inter;
+  font-weight: 600;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.master_name {
+  color: @white;
+  font-size: 40px;
+  cursor: pointer;
+}
+
+.portfolio {
+  font-size: 14px;
+  color: @viewPortfolio;
+  cursor: pointer;
+}
+
+/* Large Desktops */
+@media @largeDesktops {
+  .masters_first {
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 1fr;
+  }
+
+  #master1, #master2, #master3 {
+    grid-row-start: 1;
+    grid-column: span 4;
+  }
+
+  #master4 {
+    grid-row-start: 2;
+    grid-column: 3 / span 4;
+  }
+
+  #master5 {
+    grid-row-start: 2;
+    grid-column: 7 / span 4;
+  }
+}
+
+/* Medium Desktops */
+@media @mediumDesktopsMin and @mediumDesktopsMax {
+  .masters_first {
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 1fr;
+  }
+
+  #master1 {
+    grid-row-start: 1;
+    grid-column: 2 / span 5;
+  }
+
+  #master2 {
+    grid-row-start: 1;
+    grid-column: 7 / span 5;
+  }
+
+  #master3 {
+    grid-row-start: 2;
+    grid-column: 2 / span 5;
+  }
+
+  #master4 {
+    grid-row-start: 2;
+    grid-column: 7 / span 5;
+  }
+
+  #master5 {
+    grid-row-start: 3;
+    grid-column: 5 / span 5;
+  }
+}
+
+/* Small Desktops */
+@media @smallDesktopsMin and @smallDesktopsMax {
+  .masters_first div {
+    grid-column: span 12;
+  }
+}
+
+/* Landscape Phones */
+@media @landscapePhonesMin and @landscapePhonesMax,
+@landscapePhonesSmaller {
+  .masters_first div {
+    grid-column: span 12;
+  }
+}
+
+/*#endregion Наша команда*/
+
+/*#region Скидки и акции*/
+
+.discounts {
+  background: @black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 140px;
+}
+
+.discounts h2 {
+  color: @white;
+  font-size: 42px;
+  font-family: @roboto;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.discounts_photos {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  gap: 25px;
+
+  @media @largeDesktops {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+  }
+
+  @media @mediumDesktopsMin and @mediumDesktopsMax {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 1fr;
+  }
+
+  @media @smallDesktopsMin and @smallDesktopsMax {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 1fr;
+  }
+
+  @media @landscapePhonesMin and @landscapePhonesMax {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 1fr;
+  }
+
+  @media @landscapePhonesSmaller {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 1fr;
+  }
+}
+
+.discounts_photos div {
+  position: relative;
+}
+
+.discounts_photos img {
+  width: 100%;
+  height: auto;
+  transition: filter 0.3s ease;
+  cursor: pointer;
+}
+
+.discounts_photos span {
+  position: absolute;
+  bottom: 7%;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  color: @white;
+  font-size: 32px;
+  font-family: @ubuntu;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.discounts_photos div:hover img {
+  filter: brightness(0.4);
+}
+
+.discounts_photos div:hover span {
+  opacity: 1;
+}
+
+/*#endregion Наша команда*/
+
+/*#region О нашем салоне*/
+
+.about {
+  background: @black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 140px;
+  height: 100%;
+}
+
+.about h2 {
+  color: @white;
+  font-size: 42px;
+  font-family: @roboto;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 160px;
+
+  @media @largeDesktops {
+    flex-direction: row;
+  }
+
+  @media @mediumDesktopsMin and @mediumDesktopsMax {
+    flex-direction: column;
+  }
+
+  @media @smallDesktopsMin and @smallDesktopsMax {
+    flex-direction: column;
+  }
+
+  @media @landscapePhonesMin and @landscapePhonesMax {
+    flex-direction: column;
+  }
+
+  @media @landscapePhonesSmaller {
+    flex-direction: column;
+  }
+}
+
+.left {
+  width: 570px;
+  background: @aboutBackground;
+}
+
+.inner_left {
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+}
+
+.name {
+  font-family: @holtwood;
+  font-size: 32px;
+  letter-spacing: 1.25px;
+  line-height: 48px;
+  color: @white;
+}
+
+.about_text {
+  font-family: @ubuntu;
+  font-size: 16px;
+  color: @white;
+}
+
+.vk {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.contacts {
+  display: flex;
+  flex-direction: column;
+  margin-left: 21px;
+}
+
+.work_time {
+  color: @white;
+  font-family: @ubuntu;
+  font-size: 16px;
+}
+
+.card_address {
+  color: @white;
+  font-family: @ubuntu;
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+
+.leave_feedback {
+  color: @white;
+  font-family: @ubuntu;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.maps {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.two_gis {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.yandex svg {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.yandex {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.right {
+  width: 700px;
+  height: 617px;
+}
+
+.right iframe {
+  width: 100%;
+  height: 100%;
+  filter: grayscale(100%) invert(100%) contrast(67%);
+
+  @media @largeDesktops {
+  }
+
+  @media @mediumDesktopsMin and @mediumDesktopsMax {
+    margin-top: 30px;
+  }
+
+  @media @smallDesktopsMin and @smallDesktopsMax {
+    margin-top: 30px;
+  }
+
+  @media @landscapePhonesMin and @landscapePhonesMax {
+    margin-top: 30px;
+  }
+
+  @media @landscapePhonesSmaller {
+    margin-top: 30px;
+  }
+}
+
+/*#endregion О нашем салоне*/
