--- a/main/templates/main/html/index.html
+++ b/main/templates/main/html/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 {% endblock %}
 
 {% block css %}
@@ -23,7 +24,7 @@
 {% block content %}
     <header class="header">
         <a class="logo" href="#">
-            <img src="static/source/logo.png" alt="Логотип">
+            <img src="static/source/common/logo.png" alt="Логотип">
         </a>
 
         <ul class="buttons-list">
@@ -73,7 +74,7 @@
                 <div class="slider__item" id="makeup">
                     <div class="inside_box">
                         <img src="static/source/slider/image3.png" alt="Image 3">
-                        <h2>ПЕРМАНЕНТНЫЙ МАКИЯЖ</h2>
+                        <h2>ПЕРМАНЕНТНЫЙ<br/>МАКИЯЖ</h2>
                     </div>
                 </div>
                 <div class="slider__item" id="learning">
@@ -106,9 +107,9 @@
                 <div><img src="static/source/masters_work/photo7.png"></div>
                 <div><img src="static/source/masters_work/photo8.png"></div>
                 <div><img src="static/source/masters_work/photo9.png"></div>
-            </div>
 
-            <button class="watch_more">Посмотреть еще</button>
+                <button class="watch_more">Посмотреть еще</button>
+            </div>
         </div>
 
         <div class="team">
@@ -116,12 +117,170 @@
 
             <span class="team_signature">Интересуют работы конкретного мастера?<br> В личном портфолио мастеров собрано еще больше работ, переходи на страницу, чтобы посмотреть.</span>
 
-            <div class="masters">
-                <div class="master1"></div>
-                <div class="master2"></div>
-                <div class="master3"></div>
-                <div class="master4"></div>
-                <div class="master5"></div>
+            <div class="masters_first">
+                <div id="master1">
+                    <img src="static/source/masters/julia.png">
+
+                    <div class="caption">
+                        <span class="master_name">Юлия</span>
+                        <span class="portfolio">ПОСМОТРЕТЬ ПОРТФОЛИО</span>
+                    </div>
+                </div>
+                <div id="master2">
+                    <img src="static/source/masters/nikolai.png">
+
+                    <div class="caption">
+                        <span class="master_name">Николай</span>
+                        <span class="portfolio">ПОСМОТРЕТЬ ПОРТФОЛИО</span>
+                    </div>
+                </div>
+                <div id="master3">
+                    <img src="static/source/masters/random1.png">
+
+                    <div class="caption">
+                        <span class="master_name">Азат</span>
+                        <span class="portfolio">ПОСМОТРЕТЬ ПОРТФОЛИО</span>
+                    </div>
+                </div>
+                <div id="master4">
+                    <img src="static/source/masters/random2.png">
+
+                    <div class="caption">
+                        <span class="master_name">Кто-то</span>
+                        <span class="portfolio">ПОСМОТРЕТЬ ПОРТФОЛИО</span>
+                    </div>
+                </div>
+                <div id="master5">
+                    <img src="static/source/masters/random3.png">
+
+                    <div class="caption">
+                        <span class="master_name">Еще кто-то</span>
+                        <span class="portfolio">ПОСМОТРЕТЬ ПОРТФОЛИО</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="discounts">
+            <h2>СКИДКИ И АКЦИИ</h2>
+
+            <div class="discounts_photos">
+                <div class="next_session">
+                    <img src="static/source/discounts/next_session.png">
+                    <span>Скидка на <br/>следующий сеанс</span>
+                </div>
+                <div class="birthday">
+                    <img src="static/source/discounts/birthday.png">
+                    <span>Скидка на <br/>день рождения</span>
+                </div>
+                <div class="review">
+                    <img src="static/source/discounts/review.png">
+                    <span>Скидка за отзыв</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="about">
+            <h2>О НАШЕМ САЛОНЕ</h2>
+
+            <div class="card">
+                <div class="left">
+                    <div class="inner_left">
+                        <h3 class="name">Black Door</h3>
+
+                        <span class="about_text">
+                            Тату салон в Самаре<br/>
+                            <br/>
+                            Мы работаем более 7 лет и действительно хорошо разбираемся в татуировке.<br/>
+                            <br/>
+                            В нашем салоне мы считаем, что каждая татуировка - это произведение искусства, знания и опыт наших мастеров помогут воплотить ваше видение в жизнь.
+                        </span>
+
+                        <div class="vk">
+                            <a href="https://vk.com/bdsmr">
+                                <svg width="95" height="95" viewBox="0 0 95 95" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <g id="icons8-&#208;&#178;&#208;&#186;&#208;&#190;&#208;&#189;&#209;&#130;&#208;&#176;&#208;&#186;&#209;&#130;&#208;&#181;-144 2">
+                                        <path id="Vector"
+                                              d="M90.5725 69.6705C87.016 63.2699 77.8544 55.5789 74.0722 52.2321C73.0371 51.3157 72.9263 49.7304 73.8684 48.7171C81.0864 40.9607 86.8596 32.0486 88.8467 26.6632C89.7235 24.2843 87.9086 21.7707 85.3515 21.7707H77.9237C75.4755 21.7707 74.0425 22.6495 73.3597 24.0488C67.3609 36.3414 62.215 41.6614 58.6129 44.7706C56.5962 46.5123 53.4513 45.0695 53.4513 42.4194C53.4513 37.3131 53.4513 30.7126 53.4513 26.0319C53.4513 23.7618 51.5948 21.9251 49.3049 21.9251L35.7358 21.7707C34.0277 21.7707 33.052 23.7044 34.0772 25.0601L36.3176 28.2763C37.1608 29.3905 37.616 30.7463 37.616 32.1376L37.6041 46.6212C37.6041 49.1406 34.5502 50.3717 32.7373 48.6063C26.6039 42.6331 21.2819 30.4355 19.3661 24.6029C18.8119 22.9147 17.2306 21.7747 15.4374 21.7707L8.12045 21.7529C5.37535 21.7529 3.36847 24.3555 4.11462 26.9759C10.8002 50.4429 24.5178 72.7679 48.9645 75.1884C51.3732 75.4259 53.4513 73.4864 53.4513 71.0856V63.4738C53.4513 61.2907 55.1633 59.4145 57.3641 59.3591C57.4413 59.3571 57.5185 59.3571 57.5957 59.3571C64.0616 59.3571 71.3034 68.768 73.8367 73.1697C74.565 74.4364 75.9267 75.2082 77.3992 75.2082H87.2416C90.1134 75.2082 91.956 72.1623 90.5725 69.6705Z"
+                                              fill="white"/>
+                                    </g>
+                                </svg>
+                            </a>
+
+                            <div class="contacts">
+                                <span class="phone">
+                                    <a href="tel:+79270171661">+7 (927) 017-16-61</a>
+                                </span>
+
+                                <span class="work_time">Ежедневно и круглосуточно</span>
+                            </div>
+                        </div>
+
+                        <span class="card_address">5-я просека, 129, Самара</span>
+
+                        <span class="leave_feedback">Оставьте отзыв, чтобы получить скидку 15% на следующий сеанс</span>
+
+                        <div class="maps">
+                            <a class="two_gis" href="https://vk.com/bdsmr">
+                                <svg width="151" height="50" viewBox="0 0 171 64" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <g id="_2310502456944">
+                                        <path id="path30"
+                                              d="M162.3 23.3312H170.105C169.118 14.5821 163.57 9.9834 155.859 9.9834C148.054 9.9834 142.835 14.7505 142.835 22.9386C142.835 32.2483 149.559 34.3232 153.132 35.1647C157.74 36.2302 162.253 36.3425 162.253 41.0532C162.253 44.25 159.996 45.8203 156.799 45.8203C152.85 45.8203 150.217 43.4648 149.559 39.2028H141.848C142.318 48.4003 147.913 53.3355 156.141 53.3355C163.758 53.3355 170.011 49.1855 170.011 40.2122C170.011 30.5658 162.817 28.8273 157.787 27.9299C154.354 27.3131 150.593 26.7522 150.593 22.4338C150.593 19.4053 152.521 17.5547 155.765 17.5547C159.526 17.5547 161.783 20.0785 162.3 23.3312Z"
+                                              fill="white"/>
+                                        <path id="path32" d="M137.57 11.3853H130.188V52.0452H137.57V11.3853Z"
+                                              fill="white"/>
+                                        <path id="path26"
+                                              d="M107.902 37.8566H117.541C116.036 42.2313 112.651 44.306 108.748 44.306C101.884 44.306 98.6872 37.9688 98.6872 31.6875C98.6872 25.35 101.696 18.9006 108.702 18.9006C112.98 18.9006 116.177 21.2561 117.4 25.4623L125.345 25.4623C123.982 15.9845 117.023 10.5444 108.796 10.5444C98.6402 10.5444 91.0234 18.7884 91.0234 31.7997C91.0234 44.9791 99.2982 52.7747 108.748 52.7747C118.058 52.7747 125.345 45.5401 125.345 34.2113V30.9023H107.902V37.8566Z"
+                                              fill="white"/>
+                                        <path id="path36"
+                                              d="M74.145 10.5439C65.682 10.5439 59.4288 16.8811 59.4758 27.4247H67.0926C66.9984 22.826 69.4432 18.6198 73.7688 18.6198C77.5302 18.6198 79.7399 21.7605 79.7399 25.3496C79.7399 28.9389 77.5302 30.958 73.4396 33.1453C67.8447 36.1176 63.8484 38.0244 59.7579 39.707V52.0451H88.2499V43.7448H68.6899C68.6899 43.7448 68.755 43.7205 68.787 43.709C72.1139 42.5065 74.6133 41.2001 77.5772 39.6508C83.9243 36.286 87.5446 32.0796 87.5446 24.9011C87.5446 16.0959 82.0908 10.5439 74.145 10.5439Z"
+                                              fill="white"/>
+                                        <g id="Group">
+                                            <path id="path22"
+                                                  d="M39.4467 37.744C29.8553 37.8001 28.3038 44.6982 27.7867 50.5308L27.5517 53.1105H25.6238L25.3888 50.5308C24.8717 44.6982 23.2732 37.8001 14.0108 37.744C12.4593 33.9301 11.8011 30.8456 11.8011 27.3685C11.8011 18.6758 17.7722 10.5436 26.6111 10.5436C35.4502 10.5436 41.3273 18.6194 41.3273 27.4248C41.3273 30.8456 41.0452 33.9301 39.4467 37.744ZM26.5173 0C11.9423 0 0 14.2452 0 31.6866C0 49.1847 11.9423 63.4296 26.5173 63.4296C41.2332 63.4296 53.1285 49.1847 53.1285 31.6866C53.1285 14.2452 41.2332 0 26.5173 0Z"
+                                                  fill="#29B24A"/>
+                                        </g>
+                                    </g>
+                                </svg>
+                            </a>
+
+                            <a class="yandex" href="https://vk.com/bdsmr">
+                                <svg width="57" height="55" viewBox="0 0 57 57" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <g id="Yandex_Maps_icon 1" clip-path="url(#clip0_223_109)">
+                                        <path id="Vector"
+                                              d="M28.4475 3.77783C16.8874 3.77783 7.5166 13.1486 7.5166 24.7088C7.5166 30.4867 9.85772 35.7184 13.6441 39.5059C17.4316 43.2954 26.3544 48.7793 26.8777 54.5353C26.9562 55.3984 27.581 56.1051 28.4475 56.1051C29.3141 56.1051 29.9389 55.3984 30.0173 54.5353C30.5406 48.7793 39.4635 43.2954 43.2509 39.5059C47.0373 35.7184 49.3784 30.4867 49.3784 24.7088C49.3784 13.1486 40.0077 3.77783 28.4475 3.77783Z"
+                                              fill="#FF4433"/>
+                                        <path id="Vector_2"
+                                              d="M28.4474 32.0354C32.4934 32.0354 35.7732 28.7555 35.7732 24.7096C35.7732 20.6637 32.4934 17.3838 28.4474 17.3838C24.4015 17.3838 21.1216 20.6637 21.1216 24.7096C21.1216 28.7555 24.4015 32.0354 28.4474 32.0354Z"
+                                              fill="white"/>
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_223_109">
+                                            <rect width="55.8158" height="55.8158" fill="white"
+                                                  transform="translate(0.539551 0.289551)"/>
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                                <svg width="239" height="55" viewBox="0 0 239 51" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <g id="Yandex_Maps_RU_wordmark 1">
+                                        <path id="Vector"
+                                              d="M17.2297 40.0448H22.3196V10.7681H14.904C7.44864 10.7681 3.54153 14.5954 3.54153 20.2435C3.54153 24.7486 5.68114 27.4065 9.5218 30.1441L2.86377 40.0448H8.3789L15.7944 28.9614L13.2296 27.2337C10.1065 25.134 8.59153 23.4861 8.59153 19.9511C8.59153 16.8281 10.7843 14.7283 14.9572 14.7283H17.2297V40.0448ZM115.505 40.4567C117.831 40.4567 119.466 40.0448 120.688 39.1544V35.0745C119.426 35.9516 117.911 36.4965 115.811 36.4965C112.223 36.4965 110.748 33.719 110.748 29.3468C110.748 24.7486 112.568 22.3964 115.851 22.3964C117.791 22.3964 119.678 23.0608 120.688 23.6987V19.4461C119.638 18.8481 117.791 18.4361 115.306 18.4361C108.9 18.4361 105.565 23.021 105.565 29.4664C105.565 36.5496 108.807 40.4567 115.505 40.4567ZM84.1688 38.6095V34.5164C82.6139 35.5795 79.9959 36.4965 77.5506 36.4965C73.8827 36.4965 72.5006 34.7821 72.288 31.2339H84.3814V28.5892C84.3814 21.2136 81.1388 18.4361 76.1153 18.4361C70.0155 18.4361 67.1051 23.1007 67.1051 29.5062C67.1051 36.8819 70.7331 40.4567 77.1386 40.4567C80.3281 40.4567 82.6936 39.6195 84.1688 38.6095ZM100.183 40.0448H105.857L97.817 28.7886L104.9 18.8481H99.8371L92.7671 28.7886V18.8481H87.7436V40.0448H92.7671V29.7986L100.183 40.0448ZM65.8825 36.0845H63.6498V18.8481H49.0314V20.6687C49.0314 25.8383 48.6992 32.5362 46.9317 36.0845H45.3635V44.8821H50.0015V40.0448H61.2444V44.8821H65.8825V36.0845ZM38.2536 18.8481V27.2337H31.5557V18.8481H26.5323V40.0448H31.5557V31.194H38.2536V40.0448H43.2638V18.8481H38.2536ZM76.0356 22.3964C78.5207 22.3964 79.2782 24.4562 79.2782 27.1141V27.5261H72.288C72.4209 24.1639 73.6302 22.3964 76.0356 22.3964ZM58.6397 36.0845H51.5564C52.9518 32.8818 53.3372 27.1141 53.3372 23.4462V22.8083H58.6397V36.0845ZM146.855 40.0448H152.796L142.39 24.6689L151.825 10.7681H146.643L137.579 24.2436V10.7681H132.489V40.0448H137.579V26.3035L146.855 40.0448ZM169.899 25.5858C169.899 20.4561 167.281 18.5158 161.979 18.5158C158.656 18.5158 156.038 19.5657 154.523 20.4561V24.629C155.865 23.6057 158.816 22.516 161.394 22.516C163.786 22.516 164.889 23.3532 164.889 25.639V26.8085H164.078C156.41 26.8085 153.008 29.3468 153.008 33.6393C153.008 37.9318 155.613 40.3371 159.493 40.3371C162.444 40.3371 163.706 39.367 164.676 38.357H164.889C164.929 38.9019 165.102 39.6195 165.261 40.0448H170.152C169.979 38.3171 169.899 36.5895 169.899 34.8619V25.5858ZM164.889 34.9815C164.251 35.9118 163.068 36.6692 161.301 36.6692C159.201 36.6692 158.138 35.4865 158.138 33.6791C158.138 31.2737 159.866 30.3966 164.171 30.3966H164.889V34.9815ZM178.577 18.8481H173.939V46.1446H178.949V37.5596C180.225 39.4467 182.072 40.4567 184.225 40.4567C189.102 40.4567 192.478 36.5496 192.478 29.4265C192.478 22.3432 189.195 18.4361 184.478 18.4361C182.112 18.4361 180.172 19.5258 178.83 21.5857L178.577 18.8481ZM182.963 36.4965C180.305 36.4965 178.949 34.3569 178.949 29.4664C178.949 24.536 180.385 22.3964 183.215 22.3964C185.953 22.3964 187.295 24.536 187.295 29.4265C187.295 34.3569 185.86 36.4965 182.963 36.4965ZM210.126 22.8083V18.8481H193.315V22.8083H199.216V40.0448H204.226V22.8083H210.126ZM213.077 18.8481V40.0448H220.705C225.635 40.0448 229.13 37.5198 229.13 32.5362C229.13 27.8185 226.007 25.3333 220.785 25.3333H218.087V18.8481H213.077ZM230.978 18.8481V40.0448H236.001V18.8481H230.978ZM220.412 36.0845H218.087V29.2936H220.532C222.685 29.2936 223.947 30.2637 223.947 32.709C223.947 35.1542 222.552 36.0845 220.412 36.0845Z"
+                                              fill="white"/>
+                                    </g>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="right">
+                    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A0b7b279fc1e6be1166f9515cade5d14a8b9d63c7b09d2bbaeacfe57ba4f30cb7&amp;source=constructor"
+                            frameborder="0"></iframe>
+                </div>
             </div>
         </div>
     </main>
