master page done

--- a/main/static/styles/index.less
+++ b/main/static/styles/index.less
@@ -35,7 +35,7 @@
 @logoLeftMargin: 42px;
 @logoTopMargin: 25px;
 @headerButtonsRightMargin: 78px;
-@headerButtonsHorizontalMargin: 85px;
+@headerButtonsHorizontalMargin: 45px;
 @headerButtonsVerticalMargin: 45px;
 
 // Sizes -----------------------------------------------------------------------------------------
@@ -523,8 +523,7 @@ header {
 
 .book_session_button {
   margin-top: 52px;
-  height: 85px;
-  width: 560px;
+  padding: 20px 55px;
   background: @black;
   color: @white;
   font-family: @roboto;
