--- a/main/templates/main/html/index.html
+++ b/main/templates/main/html/index.html
@@ -42,6 +42,9 @@
             <a href="#">
                 <li>ПОРТФОЛИО</li>
             </a>
+            <a href="#">
+                <li>FAQs</li>
+            </a>
         </ul>
     </header>
 
@@ -122,7 +125,7 @@
             <div class="masters_first">
 
                 <div id="master1">
-                    <a href="/master/julia">
+                    <a href="/master/julia" target="_blank">
                         <img src="static/source/masters/julia.png">
 
                         <div class="caption">
@@ -133,7 +136,7 @@
                 </div>
 
                 <div id="master2">
-                    <a href="/master/julia">
+                    <a href="/master/nikolai" target="_blank">
                         <img src="static/source/masters/nikolai.png">
 
                         <div class="caption">
@@ -143,8 +146,8 @@
                     </a>
                 </div>
                 <div id="master3">
-                    <a href="/master/julia">
-                        <img src="static/source/masters/random1.png">
+                    <a href="/master/azat" target="_blank">
+                        <img src="static/source/masters/azat.png">
 
                         <div class="caption">
                             <span class="master_name">Азат</span>
@@ -153,7 +156,7 @@
                     </a>
                 </div>
                 <div id="master4">
-                    <a href="/master/julia">
+                    <a href="/master/julia" target="_blank">
                         <img src="static/source/masters/random2.png">
 
                         <div class="caption">
@@ -163,7 +166,7 @@
                     </a>
                 </div>
                 <div id="master5">
-                    <a href="/master/julia">
+                    <a href="/master/julia" target="_blank">
                         <img src="static/source/masters/random3.png">
 
                         <div class="caption">
